--- a/exDate/index.html
+++ b/exDate/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <section class="container">
-        <h1 id="resultado>">.</h1>
+        <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam esse et recusandae, cum maxime aperiam veritatis nam totam consectetur sunt ea! Id odio ipsa dicta voluptatum distinctio quae nam ipsam.</h1>
     </section>
 
     <script src="assets/js/main.js"></script>
