--- a/timer/index.html
+++ b/timer/index.html
@@ -10,7 +10,7 @@
 <body>
     <section class="container">
         <h1>Timer</h1>
-        <p id="timer">00:00:00</p>
+        <p class="relogio">00:00:00</p>
         <p class="btns">
             <input type="button" value="Iniciar" class="iniciar">
             <input type="button" value="Pausar" class="pausar">
