--- a/timer/index.html
+++ b/timer/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelo</title>
+    <title>Timer</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="shortcut icon" href="https://img.icons8.com/ios-filled/512/alarm-clock.png" type="image/x-icon">
 </head>
 <body>
     <section class="container">
